Fixed flex-wrap

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -26,17 +26,18 @@ body {
   justify-content: center;
 }
 
-.page-content {
-  flex-grow: 1;
-  display: flex;
-}
-
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
   flex-shrink: 0;
   padding: 16px;
+}
+
+.page-content {
+  display: flex;
+  flex: 1;
+
 }
 
 li {
@@ -64,5 +65,4 @@ a {
   border-radius: 4px;
   padding: 16px;
   width: 300px;
-  flex: 1 0 250px;
 }
